--- a/src/content/styles/modules/_details.scss
+++ b/src/content/styles/modules/_details.scss
@@ -1,18 +1,18 @@
 @mixin details {
     $slide-out-width: rem(28);
 
+    .rv-show-single {
+        display: none !important;
+    }
+
     rv-details {
         @include media($rv-sm...) {
             position: fixed;
             left: 0;
-            top: 0;
+            top: $toolbar-height + 1;
             right: 0;
             bottom: 0;
             z-index: 3;
-
-            .rv-header-float {
-                margin-left: 47px;
-            }
         }
     }
 
@@ -20,6 +20,13 @@
         height: 80%;
         width: 70%;
         border-radius: 0;
+
+        @include media($rv-sm) {
+            width: 100%;
+            min-width: 100%;
+            height: 100%;
+            min-height: 100%;
+        }
     }
 
     .rv-details {
@@ -201,11 +208,6 @@ $details-record-height: rem(6.0);
 
         .rv-subheader {
             padding: rem(0.8) rem(1.6);
-
-            @include media($rv-sm) {
-                padding-left: 50px;
-                padding-top: 0;
-            }
         }
     }
 
